--- a/rest-api/.env
+++ b/rest-api/.env
@@ -1,1 +1,1 @@
-MONGO_URL = mongodb+srv://nhamdinh:vIbRBPyXso7lhY4h@cluster0.eppt3.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://nhamdinh01:K8P5SuQwMaoSNyMi@cluster0.eppt3.mongodb.net/social?retryWrites=true&w=majority
