--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,11 +9,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.2",
-    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "socket.io-client": "^4.5.3",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
@@ -42,5 +43,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8800/api/"
+  "proxy": "http://localhost:8800/api/",
+  "devDependencies": {
+    "sass": "^1.56.0"
+  }
 }
